# yolo26-asl

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  gradio_app.py  main.py
configs/: __init__.py  config.yaml
configs/data/: combined.yaml  hand_keypoints.yaml  signalphaset.yaml
configs/inference/: batch.yaml  realtime.yaml
configs/model/: classifier_mlp.yaml  classifier_transformer.yaml  yolo26n_pose.yaml  yolo26s_pose.yaml
configs/training/: default.yaml  fast_dev.yaml  production.yaml
data/: asl_dataset.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.gpu  Dockerfile.hf  docker-compose.yml
huggingface_space/: Dockerfile  README.md  app.py  requirements.txt
notebooks/: kaggle_yolo26_asl.ipynb
src/: __init__.py
src/data/: __init__.py  augmentation.py  dataset.py  download.py  preprocess.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/inference/: __init__.py  predictor.py  realtime.py
src/models/: __init__.py  classifier.py  hand_pose.py  pipeline.py
src/training/: __init__.py  train_classifier.py  train_pose.py  trainer.py
src/utils/: __init__.py  config.py  constants.py  device.py  logger.py  visualization.py
tests/: __init__.py
tests/unit/: test_constants.py
